--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "lwc-webpack-plugin",
   "version": "0.1.0",
   "description": "Webpack Plugin for LWC",
-  "main": "lib/index.js",
+  "main": "dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "tsc --watch"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,12 @@
   },
   "homepage": "https://github.com/davidturissini/lwc-webpack-plugin#readme",
   "devDependencies": {
+    "@types/node": "^12.0.1",
+    "typescript": "^3.4.5"
+  },
+  "dependencies": {
+    "@lwc/babel-plugin-component": "^0.37.4",
     "@lwc/compiler": "^0.37.4",
-    "@lwc/engine": "^0.37.4"
+    "babel-loader": "^8.0.6"
   }
 }
