--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/davidturissini/lwc-webpack-plugin#readme",
   "devDependencies": {
     "@types/node": "^12.0.1",
+    "@types/webpack": "^4.4.31",
     "typescript": "^3.4.5"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.3.3",
     "@lwc/babel-plugin-component": "^0.37.4",
     "@lwc/compiler": "^0.37.4",
     "babel-loader": "^8.0.6"
