--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Webpack Plugin for LWC",
   "main": "dist/main.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp -R ./src/defaults ./dist/defaults",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc --watch"
   },
