--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "tsc && cp -R ./src/defaults ./dist/defaults",
     "test": "jest",
-    "watch": "tsc --watch",
-    "build:example": "yarn build && npx webpack"
+    "watch": "tsc --watch"
   },
   "repository": {
     "type": "git",
@@ -21,15 +20,9 @@
   "homepage": "https://github.com/davidturissini/lwc-webpack-plugin#readme",
   "devDependencies": {
     "@lwc/engine": "1.1.0-alpha10",
-    "@salesforce-ux/design-system": "3.0.0-alpha-5",
-    "@types/jest": "^24.0.18",
     "@types/node": "^12.0.1",
     "@types/webpack": "^4.4.31",
-    "jest": "^24.9.0",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.4.5",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7"
+    "typescript": "^3.4.5"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.3.3",
