--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
   },
   "homepage": "https://github.com/davidturissini/lwc-webpack-plugin#readme",
   "devDependencies": {
-    "@lwc/engine": "1.1.0-alpha10",
-    "@types/node": "^12.0.1",
-    "@types/webpack": "^4.4.31",
+    "@lwc/engine": "^1.1.14",
+    "@types/node": "^12.12.14",
+    "@types/webpack": "^4.41.0",
     "typescript": "^3.4.5"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.3.3",
-    "@lwc/babel-plugin-component": "^0.37.4",
-    "@lwc/compiler": "1.1.0-alpha10",
-    "@lwc/module-resolver": "1.1.0-alpha10",
+    "@lwc/babel-plugin-component": "^1.1.14",
+    "@lwc/compiler": "^1.1.14",
+    "@lwc/module-resolver": "^1.1.14",
     "babel-loader": "^8.0.6"
   }
 }
